[package]
name = "actix-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = {version = "0.4.23", features = ["serde", "rustc-serialize"]}
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
sqlx = {version = "0.6.2", features = ["runtime-actix-native-tls", "macros", "chrono", "json", "postgres", "uuid"]}
uuid = "1.3.0"
